<resources>
    <string name="app_name">DigitalPolicingPlatform</string>
    <string name="map_release_key">AIzaSyAMktZen8F1lPpkkTDjo1TqRiH3O4vnfFI</string>
    <string name="default_notification_channel_id">DEFAULT_CHANNEL_ID</string>
    <string name="no_details_available">No details available!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="session_expired">Session expired, Please login again !</string>
    <string name="permission_required">Permission required</string>
    <string name="storage_permission_granted">Storage permission granted</string>
    <string name="permission_granted">Permission granted</string>
    <string name="title_camera">Camera</string>
    <string name="title_storage">Storage</string>
    <string name="title_contact">Contact</string>
    <string name="no_network">Network not available</string>
    <string name="wifi_enable">WiFi enable</string>
    <string name="mobile_data_enable">Mobile data enable</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="delete_confirmation_file">Do you want to delete </string>
    <string name="delete_confirmation_photo">Do you want to delete this photo?</string>
    <string name="doc_validation">Only .doc, .docx, .xls, .xlsx, .ppt, .pptx and .pdf file should be attached</string>
    <string name="attached_validation"> already attached!</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="capture_image">Capture</string>
    <string name="browse_image">Browse</string>
    <string name="map">Map</string>
    <string name="start_fresh">Start Afresh</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="return_to">Return to</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="load_data">Load Data</string>
    <string name="no_file">No file chosen</string>
    <string name="attached_file">Attached file : </string>
    <string name="description">Description</string>
    <string name="select_file">Select the files to attach</string>
    <string name="hint_photo_description">Enter Description</string>
    <string name="max_photo_taken">Maximum photo taken!</string>
    <string name="max_documents_taken">Maximum documents attached!</string>
    <string name="sub_process_header">Sub-Process List</string>
    <string name="control_pannel">Control Panel</string>
    <string name="tor">TOR</string>
    <string name="stop_search">Stop \n&amp; Search</string>
    <string name="pocket_book">Pocketbook</string>
    <string name="crime">Crime</string>
    <string name="domestic_abuse">Domestic Abuse</string>
    <string name="witness_statement">Witness Statement</string>
    <string name="investigation">Investigation</string>
    <string name="incident">Incident</string>
    <string name="intelligence">Intelligence</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="media">Media</string>
    <string name="fds_search">FDS Search</string>
    <string name="tor_creation">TOR CREATION</string>
    <string name="stop_process">STOP &amp; SEARCH</string>
    <string name="enter_info">Enter Info</string>
    <string name="select">Select</string>
    <string name="choose_officer">Choose Officer</string>
    <string name="choose_person">Choose Person</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="choose_team">Choose Team</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="choose_address">Choose Address by pin pointing</string>
    <string name="select_address">Choose Address</string>
    <string name="select_date">Choose Date</string>
    <string name="warning_list">Warning List</string>
    <string name="no_data">No data available!</string>
    <string name="select_cases">Choose Cases</string>
    <string name="location_on_map">Location on Map</string>
    <string name="not_understand_answer">Sorry! I am not able to understand. Please try again!</string>
    <string name="no_answer">Sorry! Answer list is not available</string>
    <string name="completed">Congratulations!! Your process is completed.</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="enter_valid_postcode">Enter valid Postcode</string>
    <string name="field_cannot_blank">Field can not be blank</string>
    <string name="hint_customer_code">Customer Code</string>
    <string name="hint_username">Username</string>
    <string name="login">Login</string>
    <string name="easy_pin">Easy Pin</string>
    <string name="icon">Icon</string>
    <string name="view_mor">View More</string>
    <string name="view_less">View Less</string>
    <string name="name">Name </string>
    <string name="licence_no">Licenece No : </string>
    <string name="validity">Valid Till : </string>
    <string name="weapon_type">Weapon Type :</string>
    <string name="address">Address :</string>
    <string name="vrm">VRM : </string>
    <string name="make">Make : </string>
    <string name="model">Model :</string>
    <string name="color">Color :</string>
    <string name="lost">Lost/Stolen :</string>
    <string name="house_no">House No : </string>
    <string name="street">Street : </string>
    <string name="city">City :</string>
    <string name="country">Country :</string>
    <string name="my_dashboard">Dashboard</string>
    <string name="my_surroundings">My Surroundings</string>
    <string name="to_do">To Do</string>
    <string name="pending_actions">Pending Actions</string>
    <string name="statistics">Statistics</string>
    <string name="briefing">Briefing</string>
    <string name="out_of_station">Out of Station</string>
    <string name="yesterday">(Yesterday)</string>
    <string name="mine">Mine</string>
    <string name="team">Team</string>
    <string name="more">More</string>
    <string name="more_dot">More>></string>
    <string name="home">Home</string>
    <string name="task">Task</string>
    <string name="witness">Witness</string>
    <string name="time_left">Time Left</string>
    <string name="user_id">User ID</string>
    <string name="collar_id">Collar ID</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="forgot_pin"><u>Forgot Pin</u></string>
    <string name="virtual_assistance">Virtual Assistant</string>
    <string name="notification">Notifications</string>
    <string name="intelligence_info">Intelligence information</string>
    <string name="method_utilise">Method to be utilised</string>
    <string name="aim">Aim</string>
    <string name="officer_safety">Officer Safety</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="search">Search</string>
    <string name="pending">Pending</string>
    <string name="persons">Persons</string>
    <string name="cases_persons">Case Persons</string>
    <string name="vehicle">Vehicles</string>
    <string name="images">Images</string>
    <string name="officers">Officers</string>
    <string name="mark_smith">Mark Smith</string>
    <string name="constable">Constable</string>
    <string name="add_log">Add Log</string>
    <string name="enter_remark">Enter your remarks here..</string>
    <string name="submit">Submit</string>
    <string name="previous_log">Previous Logs</string>
    <string name="no_log">No Logs found.</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="type">Type</string>
    <string name="branch">Branch</string>
    <string name="address_no_colon">Address</string>
    <string name="person_details">Person Details</string>
    <string name="pageCount">2/10</string>
    <string name="crime_detail">Crime Details</string>
    <string name="domestic_abuse_desc">Domestic abuse done by John smith on Marry Rosemarry.</string>
    <string name="victim_detail">Victim details</string>
    <string name="marry_rosemarry">Marry Rosemarry</string>
    <string name="suspect_detail">Suspect details</string>
    <string name="office_incharge">Officer in charge</string>
    <string name="incident_details">Incident Details</string>
    <string name="robbery">Robbery</string>
    <string name="reporting_person">Reporting Person</string>
    <string name="view_more">Click to view more details</string>
    <string name="task_details">Task Details</string>
    <string name="priority_arrest">Priority and Arrest</string>
    <string name="quick_arrest">Quickly Arrest the person</string>
    <string name="highly_dangerous">Highly dangerous person</string>
    <string name="handcuffs">Handcuffs can be used</string>
    <string name="arrest_custody">Arrest and take into custody</string>
    <string name="be_safe">Be safe and secure</string>
    <string name="mark_comleted">Mark as Complete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pole_nominal_header">Pole Nominal Details</string>
    <string name="pole_vehicle_header">Pole Vehicle Details</string>
    <string name="pole_address_header">Pole Address Details</string>
    <string name="pnc_nominal_header">PNC Nominal Details</string>
    <string name="pnc_vehicle_header">PNC Vehicle Details</string>
    <string name="nflms_nominal_header">NFLMS Nominal Details</string>
    <string name="nflms_address_header">NFLMS Address Details</string>
    <string name="qas_nominal_header">QAS Nominal Details</string>
    <string name="qas_address_header">QAS Address Details</string>
    <string name="dl_nominal_header">DL Nominal Details</string>
    <string name="dl_dlcheck_header">DL Check Details</string>
    <string name="stops_nominal_header">STOPS Nominal Details</string>
    <string name="stops_address_header">STOPS Address Details</string>
    <string name="stops_vehicle_header">STOPS Vehicle Details</string>
    <string name="image">Images</string>
    <string name="further_information">Further Information</string>
    <string name="person">Persons</string>
    <string name="investigations">Investigations</string>
    <string name="investigation_details">Investigation Details</string>
    <string name="court_warrant_desc">Court Warrant Description</string>
    <string name="intelligence_report">Intelligence Reports</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="pin">Pin</string>
    <string name="change_password">Change Password</string>
    <string name="security">Security</string>
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="night_view">Night View</string>
    <string name="module_shortcut">Modules Shortcut</string>
    <string name="classic_view">Classic View</string>
    <string name="offline">Offline</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
</resources>