<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="always" />

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/module"
                    android:title="@string/module_shortcut"
                    android:icon="@drawable/ic_shortcut"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/night"
                    android:title="@string/night_view"
                    android:icon="@drawable/ic_night_view"
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/classic"
                    android:title="@string/classic_view"
                    android:icon="@drawable/ic_fullscreen"
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    app:showAsAction="always"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/security">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/fingerprint"
                    android:title="@string/fingerprint"
                    android:icon="@drawable/ic_fingerprint_gray"
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/pin"
                    android:title="@string/pin"
                    android:icon="@drawable/ic_pin"
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/changepassword"
                    android:title="@string/change_password"
                    android:icon="@drawable/view"
                    app:showAsAction="always"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/offline"
                    android:title="@string/offline"
                    android:icon="@drawable/ic_offline"
                    app:showAsAction="always"/>

                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_poweroff"
                    app:showAsAction="always"/>
                <item
                    android:id="@+id/version"
                    android:title="@string/version"
                    android:icon="@null"
                    app:showAsAction="always"/>
            </group>
        </menu>
    </item>

   <!-- <item
        android:id="@+id/offline"
        android:title="@string/offline"
        android:icon="@drawable/ic_offline"
        app:showAsAction="always" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_poweroff"
        app:showAsAction="always" />-->

</menu>
